[tool.poetry]
name = "pyenigma"
version = "0.2.2"
description = "Python Enigma cypher machine simulator."
authors = [
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
    "Christophe Goessen"
]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://git.sr.ht/~cedric/pyenigma"
repository = "https://git.sr.ht/~cedric/pyenigma"

keywords = ["cryptography", "security"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Security',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]

include = [
    "COPYING",
    "README.md",
    "CHANGELOG.md",
    "bin/*"
]

[tool.poetry.scripts]
enigma = "bin.enigma:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.750"
flake8 = "^3.7.9"
nose2 = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
