[tool.poetry]
name = "pyenigma"
version = "0.4.1"
description = "Python Enigma cypher machine simulator."
authors = [
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
    "Christophe Goessen"
]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://sr.ht/~cedric/pyenigma"
repository = "https://git.sr.ht/~cedric/pyenigma"

keywords = ["cryptography", "security"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Security',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]

include = [
    "COPYING",
    "README.md",
    "CHANGELOG.md",
    "bin/*"
]

[tool.poetry.scripts]
enigma = "bin.enigma:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
nose2 = "^0.12.0"
pre-commit = "^2.21.0"
pip-audit = "^2.4.13"
black = "^22.12.0"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"
